# test-glad

./: .gitmodules  CMakeLists.txt
apps/test-glad/src/: main.cc
engine/include/: gl.h  shader.h  utils.h
engine/src/: shader.cc  utils.cc
shaders/: test.frag  test.geom  test.vert
